<resources>
    <string name="app_name">Indo Movies</string>
    <string name="name_movies">Nama Movies</string>
    <string name="name_tv_show">Nama Tv Show</string>
    <string name="rating_movie">Rating Movie</string>
    <string name="rating_tv_show">Rating Tv Show</string>
    <string name="desc_movies">Overview</string>
    <string name="date_movies">Release Date </string>
    <string name="date_tv_show">Date Tv Show</string>
    <string name="movies_photo">Movies Photo</string>
    <string name="tv_show_photo">Tv Show Photo</string>
    <string name="genre_movies">Genres</string>
    <string name="genre_tv_show">Genres</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tv">Tv Show</string>
    <string name="change_language">Change Language</string>

</resources>
